syntax ="proto3";
package tutorial;
option java_package = "com.lazyaudio.yyting.cache.protobuf.autogenerate";
option java_outer_classname = "UserProtos";   
message UserBean {
	 int32 Id=1;
	 int64 UserId=2;
	 string AccountName=3;
	 string PhoneNum=4;
	 string Email=5;
	 string Password=6;
	 int32 BaseState=7;
	 int32 Uuid=8;
	 string OpenId=9;
	 int32 Type=10;
	 string AreaIds=11;
	 int32 Sex=12;
	 uint64 Birthday=13;
	 string BackCover=14;
	 string AnnouncerType=15;
	 string LikeTags=16;
	 int32 LikeCount=17;
	 int32 AblumnCount=18;
	 int32 FollowerCount=19;
	 int32 FollowCount=20;
	 string Remark=21;
	 string ShortRemark=22;
	 uint64 CreateTime=23;
	 uint64 UpdateTime=24;
	 int32 Hot=25;
	 string NickName=26;
	 int32 Source=27;
	 int32 State=28;
	 string Cover=29;
	 string Features=30;
	 int64 Flag=31;
     int32 folderCount=32;
     int32 collectionFolderCount=33;
     int32 collectionReadCount=34;
     int32 status=35;
     string Uuids=36;
}